--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
 </script>
 
 
-<title>Page Title</title>
+<title>FundraiseUp</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>FundraiseUp Test Assignment</h1>
 
 
 <!-- Fundraise Up: the new standard for online giving -->
