--- a/index.html
+++ b/index.html
@@ -33,5 +33,10 @@ for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
 
 <a href="#XJKDHSTQ" style="display: none"></a>
 
+	<script>
+	gtag("event","checkout", {
+	text: "someone_clicked_on_checlout"});
+	</script>
+
 </body>
 </html>
