--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@ for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
 <!-- End Fundraise Up -->
 
 
-<a href="#XJKDHSTQ" style="display: none"></a>
+<a href="#XJKDHSTQ" style="display: none" id="donate"></a>
 
 	<script>
-	gtag("event","checkout", {
-	text: "someone_clicked_on_checlout"});
+	document.getElementById("donate").addEventListener("click", function() {
+	gtag("event","donate", {
+	text: "someone_clicked_on_donate"});
+	});
 	</script>
 
 </body>
