--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-4W9HVBX2LB');
+  gtag('config', 'G-4W9HVBX2LB',{ 'debug_mode': true });
 </script>
 
 
@@ -31,7 +31,7 @@ for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
 <!-- End Fundraise Up -->
 
 
-<a href="#XJKDHSTQ" style="display: none" id="donate"></a>
+<!-- <a href="#XJKDHSTQ" style="display: none" id="donate"></a> -->
 
 	<script>
 	document.getElementById("donate").addEventListener("click", function() {
