--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@ for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
 <!-- End Fundraise Up -->
 
 
-<!-- <a href="#XJKDHSTQ" style="display: none" id="donate"></a> -->
+<a href="#XJKDHSTQ" style="display: none" id="donate"></a>
 
 	<script>
-	document.getElementById("donate").addEventListener("click", function() {
+	document.getElementById("XJKDHSTQ").addEventListener("click", function() {
 	gtag("event","donate", {
 	text: "someone_clicked_on_donate"});
 	});
