--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
 <!-- End Fundraise Up -->
 
 
-<a href="#XJKDHSTQ" style="display: none" id="donate"></a>
+<a href="#XJKDHSTQ" id="XJKDHSTQ"></a>
 
 	<script>
 	document.getElementById("XJKDHSTQ").addEventListener("click", function() {
