--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-4W9HVBX2LB',{ 'debug_mode': true });
+  gtag('config', 'G-4W9HVBX2LB');
 </script>
 
 <title>FundraiseUp</title>
@@ -19,7 +19,9 @@
 <h1>FundraiseUp Test Assignment</h1>
 
 <!-- Fundraise Up: the new standard for online giving -->
-<script>(function(w,d,s,n,a){if(!w[n]){var l='call,catch,on,once,set,then,track'
+<script>(function(w,d,s,n,a)
+{if(!w[n])
+{var l='call,catch,on,once,set,then,track'
 .split(','),i,o=function(n){return'function'==typeof n?o.l.push([arguments])&&o
 :function(){return o.l.push([n,arguments])&&o}},t=d.getElementsByTagName(s)[0],
 j=d.createElement(s);j.async=!0;j.src='https://cdn.fundraiseup.com/widget/'+a;
@@ -28,10 +30,11 @@ for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
 })(window,document,'script','FundraiseUp','AEMZUDUM');</script>
 <!-- End Fundraise Up -->
 
-<a href="#XJKDHSTQ" id="XJKDHSTQ"></a>
+<a href="#XJKDHSTQ" id="QQQQQQ"></a>
 
 <script>
-	document.getElementById("XJKDHSTQ").addEventListener("click", function() {
+	document.getElementById("QQQQQQ").addEventListener("click", function() {
+		console.log("pipi pupu");
 		gtag("event", "donate", {
 			'event_category': 'Fundraising',
 			'event_label': 'Donate Button Click',
