--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 j=d.createElement(s);j.async=!0;j.src='https://cdn.fundraiseup.com/widget/'+a;
 t.parentNode.insertBefore(j,t);o.s=Date.now();o.v=4;o.h=w.location.href;o.l=[];
 for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
-})(window,document,'script','FundraiseUp','AEMZUDUM');</script>
+})(window,document,'script','FundraiseUp','AEMZUDUM-TEST');</script>
 <!-- End Fundraise Up -->
 
-<a href="#XJKDHSTQ" id="QQQQQQ"></a>
+<a href="#XJKDHSTQ" id="QQQQQQ" style="display: none"></a>
 
 <script>
 	document.getElementById("QQQQQQ").addEventListener("click", function() {
