--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-4W9HVBX2LB');
+  gtag('config', 'G-4W9HVBX2LB',{ 'debug_mode': true });
 </script>
 
 <title>FundraiseUp</title>
@@ -27,7 +27,7 @@
 j=d.createElement(s);j.async=!0;j.src='https://cdn.fundraiseup.com/widget/'+a;
 t.parentNode.insertBefore(j,t);o.s=Date.now();o.v=4;o.h=w.location.href;o.l=[];
 for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
-})(window,document,'script','FundraiseUp','AEMZUDUM-TEST');</script>
+})(window,document,'script','FundraiseUp','AEMZUDUM');</script>
 <!-- End Fundraise Up -->
 
 <a href="#XJKDHSTQ" id="QQQQQQ" style="display: none"></a>
@@ -38,7 +38,6 @@ for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
 		gtag("event", "donate", {
 			'event_category': 'Fundraising',
 			'event_label': 'Donate Button Click',
-			'value': 1
 		});
 	});
 </script>
