--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
 })(window,document,'script','FundraiseUp','AEMZUDUM');</script>
 <!-- End Fundraise Up -->
 
-<a href="#XJKDHSTQ" id="QQQQQQ" style="display: none"></a>
+<a href="#XJKDHSTQ" id="QQQQQQ" style="display: none" onclick="handleClick(event)"></a>
 
 <script>
 //	document.getElementById("QQQQQQ").addEventListener("Click", function(event) {
@@ -38,7 +38,13 @@ for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
 //		console.log("pipi pupu");
 		
 //	});
-	
+function handleClick(event) {
+      event.preventDefault(); // Предотвращаем переход по ссылке
+      console.log('Link clicked!');
+      // Ваш код обработки события
+    }
+
+
 	document.addEventListener('DOMContentLoaded', (event) => {
   const link = document.getElementById('QQQQQQ');
 
