--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@ function handleClick(event) {
     }
 
 
-	document.addEventListener('DOMContentLoaded', (event) => {
-  const link = document.getElementById('QQQQQQ');
+// 	document.addEventListener('DOMContentLoaded', (event) => {
+//   const link = document.getElementById('QQQQQQ');
 
-  link.addEventListener('click', (event) => {
-    event.preventDefault(); // Предотвращаем переход по ссылке
-//    console.log('Link clicked!');
+//   link.addEventListener('click', (event) => {
+//     event.preventDefault(); // Предотвращаем переход по ссылке
+// //    console.log('Link clicked!');
 	alert("privet");
 // Ваш код обработки события
 	gtag("event", "donate", {
