--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@ function handleClick(event) {
 
 //   link.addEventListener('click', (event) => {
 //     event.preventDefault(); // Предотвращаем переход по ссылке
-// //    console.log('Link clicked!');
-	alert("privet");
-// Ваш код обработки события
-	gtag("event", "donate", {
-			'event_category': 'Fundraising',
-			'event_label': 'Donate Button Click',
-		});
-	});
-});
+// // //    console.log('Link clicked!');
+// 	alert("privet");
+// // Ваш код обработки события
+// 	gtag("event", "donate", {
+// 			'event_category': 'Fundraising',
+// 			'event_label': 'Donate Button Click',
+// 		});
+// 	});
+//});
 	
 </script>
 
