--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
 <h1>FundraiseUp Test Assignment</h1>
 
-<a href="#XJKDHSTQ" id="QQQQQQ" style="display: none" onclick="handleClick(event)"></a>
+<!-- Временно уберите стиль display: none, чтобы проверить работу ссылки -->
+<a href="#XJKDHSTQ" id="QQQQQQ" style="display: inline" onclick="handleClick(event)">Click me</a>
 
 <!-- Fundraise Up: the new standard for online giving -->
 <script>(function(w,d,s,n,a)
@@ -32,40 +33,12 @@ for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
 })(window,document,'script','FundraiseUp','AEMZUDUM');</script>
 <!-- End Fundraise Up -->
 
-
-
 <script>
-//	document.getElementById("QQQQQQ").addEventListener("Click", function(event) {
-//		event.preventDefault();
-//		console.log("pipi pupu");
-		
-//	});
 function handleClick(event) {
-      event.preventDefault(); // Предотвращаем переход по ссылке
-      console.log('Link clicked!');
-      // Ваш код обработки события
-    }
-
-
-// 	document.addEventListener('DOMContentLoaded', (event) => {
-//   const link = document.getElementById('QQQQQQ');
-
-//   link.addEventListener('click', (event) => {
-//     event.preventDefault(); // Предотвращаем переход по ссылке
-// // //    console.log('Link clicked!');
-// 	alert("privet");
-// // Ваш код обработки события
-// 	gtag("event", "donate", {
-// 			'event_category': 'Fundraising',
-// 			'event_label': 'Donate Button Click',
-// 		});
-// 	});
-//});
-	
+    event.preventDefault(); // Предотвращаем переход по ссылке
+    console.log('privet'); // Выводим сообщение в консоль
+}
 </script>
-
-
-
 
 </body>
 </html>
