--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
 <a href="#XJKDHSTQ" style="display: none"></a>
 
 <script>
-	document.getElementById("QQQQQQ").addEventListener("Click", function(event) {
+	document.querySelector('[data-qa="fun-element"]').addEventListener("Click", function(event) {
 		event.preventDefault();
 		console.log("pipi pupu");
 		gtag("event", "donate", {
