--- a/index.html
+++ b/index.html
@@ -33,14 +33,21 @@ for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
 <a href="#XJKDHSTQ" style="display: none"></a>
 
 <script>
-	document.querySelector('[data-qa="fun-element"]').addEventListener("Click", function(event) {
-		event.preventDefault();
-		console.log("pipi pupu");
-		gtag("event", "donate", {
- 			'event_category': 'Fundraising',
- 			'event_label': 'Donate Button Click',
- 		});
-	});
+	document.addEventListener('DOMContentLoaded', function() {
+    const button = document.querySelector('[data-qa="fun-element"]');
+    if (button) {
+        button.addEventListener('click', function(event) {
+            event.preventDefault(); // Предотвращаем стандартное действие
+            console.log("pipi pupu"); // Выводим сообщение в консоль
+            gtag("event", "donate", {
+                'event_category': 'Fundraising',
+                'event_label': 'Donate Button Click',
+            });
+        });
+    } else {
+        console.error('Button with data-qa="fun-element" not found!');
+    }
+});
 
 
 // 	document.addEventListener('DOMContentLoaded', (event) => {
