--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
 
 <script>
 	document.addEventListener('DOMContentLoaded', function() {
-    const button = document.querySelector('data-qa="fun-element"');
+    const button = document.querySelector('[data-qa]="fun-element"');
     if (button) {
         button.addEventListener('click', function(event) {
             event.preventDefault(); // Предотвращаем стандартное действие
