--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
 
 <a href="#XJKDHSTQ" style="display: none"></a>
 
-<script>
+<!-- <script>   //old and not fucking working script
 	document.addEventListener('DOMContentLoaded', function() {
     const element = document.getElementsByClassName("button-hover-bg");
     if (element) {
@@ -48,7 +48,7 @@ for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
         console.error('Button with class "button-hover-bg" not found!');
     }
 });
-
+</script> -->
 
 // 	document.addEventListener('DOMContentLoaded', (event) => {
 //   const link = document.getElementById('QQQQQQ');
@@ -62,7 +62,24 @@ for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
 // 	});
 //});
 	
-</script>
+<script>
+    // Track checkout opening
+    FundraiseUp.on('checkout:opened', function(data) {
+        gtag('event', 'checkout_opened', {
+            'event_category': 'Donation',
+            'event_label': 'Checkout Opened'
+        });
+    });
+
+    // Track donation completion
+    FundraiseUp.on('donation:completed', function(data) {
+        gtag('event', 'purchase', {
+            'transaction_id': data.donationId,
+            'value': data.amount,
+            'currency': data.currency
+        });
+    });
+    </script>
 
 
 
