--- a/index.html
+++ b/index.html
@@ -33,42 +33,22 @@ for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
 <a href="#XJKDHSTQ" style="display: none" id="donation-button"></a>
 	
 <script>
-    // Check for Fundraise Up object
-    if (window.FundraiseUp) {
-        console.log('Fundraise Up object found!');
-        // Check for a property indicating form state (if applicable)
-        if (window.FundraiseUp.isFormVisible) { 
-            console.log('Fundraise Up form is visible!');
+    // Function to track donation form opening
+    function trackDonationFormOpen() {
+        console.log('Checking for donation form...');
+        // Look for specific elements or attributes indicating the donation form's presence
+        if (document.querySelector('.fundraiseup-donation-form') || document.getElementById('fundraiseup-donation-form')) {
+            console.log('Donation form found!');
             gtag('event', 'donation_form_opened', {
                 'event_category': 'fundraise_up',
                 'event_label': 'donation_form_open'
-            });
-        } else {
-            // Check for a method to get form visibility (if applicable)
-            window.FundraiseUp.getFormState(function(state) { 
-                console.log('Fundraise Up form state:', state);
-                if (state === 'visible') {
-                    gtag('event', 'donation_form_opened', {
-                        'event_category': 'fundraise_up',
-                        'event_label': 'donation_form_open'
-                    });
-                }
             });
         }
     }
 
-    // Timer to poll for form visibility (if no Fundraise Up object available)
-    let formCheckInterval = setInterval(function() {
-        // Look for specific elements indicating the donation form's presence
-        if (document.querySelector('.fundraiseup-donation-form') || document.getElementById('fundraiseup-donation-form')) {
-            clearInterval(formCheckInterval); // Stop the timer
-            console.log('Donation form detected!');
-            gtag('event', 'donation_form_opened', {
-                'event_category': 'fundraise_up',
-                'event_label': 'donation_form_open'
-            });
-        }
-    }, 500); // Check every 500ms
+    // Observe changes in the DOM
+    const observer = new MutationObserver(trackDonationFormOpen);
+    observer.observe(document.body, { subtree: true, childList: true });
 
     // Event listener for checkout button click
     document.getElementById('donation-button').addEventListener('click', function() {
