--- a/index.html
+++ b/index.html
@@ -33,29 +33,31 @@ for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
 <a href="#XJKDHSTQ" style="display: none" id="donation-button"></a>
 	
 <script>
-    // Event listener for checkout button click
     document.getElementById('donation-button').addEventListener('click', function() {
-        console.log('Donation button clicked!');
-        // Trigger event to track checkout initiation
-        gtag('event', 'checkout_started', {
-            'event_category': 'fundraise_up',
-            'event_label': 'checkout_button_click'
-        });
-    });
+      console.log('Donation button clicked!');
 
-    // Timeout and Manual DOM Query
-    setTimeout(function() {
-        console.log('Checking for donation form...');
-        // Look for specific elements or attributes indicating the donation form's presence
-        if (document.querySelector('.fundraiseup-donation-form') || document.getElementById('fundraiseup-donation-form')) {
-            console.log('Donation form found!');
-            gtag('event', 'donation_form_opened', {
-                'event_category': 'fundraise_up',
-                'event_label': 'donation_form_open'
-            });
+      // Track checkout initiation in Google Analytics
+      gtag('event', 'checkout_started', {
+        'event_category': 'fundraise_up',
+        'event_label': 'checkout_button_click'
+      });
+
+      // Start an interval to check for the modal
+      const modalCheckInterval = setInterval(function() {
+        const modalElement = document.querySelector('.modal-desktop'); // Replace with the actual class/ID
+        if (modalElement) { 
+          clearInterval(modalCheckInterval); // Stop checking
+          console.log('Donation modal opened!'); 
+
+          // Track modal open in Google Analytics
+          gtag('event', 'donation_form_opened', {
+            'event_category': 'fundraise_up',
+            'event_label': 'donation_modal_open'
+          });
         }
-    }, 3000); // Wait 3 seconds
-</script>
+      }, 200); // Check every 200ms
+    });
+  </script>
 
 
 </body>
