--- a/index.html
+++ b/index.html
@@ -33,30 +33,80 @@ for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
 <a href="#XJKDHSTQ" style="display: none" id="donation-button"></a>
 	
 <script>
-    document.getElementById('donation-button').addEventListener('click', function() {
-      console.log('Donation button clicked!');
+  // Function to send event to Google Analytics with a delay
+  function sendGAEvent(eventName, eventParams) {
+      console.log('Queuing GA event:', eventName, eventParams);
+      setTimeout(() => {
+          if (typeof gtag === 'function') {
+              gtag('event', eventName, eventParams);
+              console.log('GA event sent successfully:', eventName);
+          } else {
+              console.error('gtag function not available');
+          }
+      }, 500);  // 500ms delay
+  }
 
-      // Track checkout initiation in Google Analytics
-      gtag('event', 'checkout_started', {
-        'event_category': 'fundraise_up',
-        'event_label': 'checkout_button_click'
+  // Detect checkout opened
+  document.addEventListener('click', function(event) {
+      console.log('Click detected:', event.target);
+      if (event.target.matches('a[href^="#"]')) {
+          console.log('Potential widget trigger clicked');
+          setTimeout(() => {
+              const checkoutPopup = document.querySelector('#fru-checkout-popup, .fru-checkout-popup');
+              if (checkoutPopup) {
+                  console.log('Checkout opened detected');
+                  sendGAEvent('checkout_opened', {
+                      'event_category': 'Donation',
+                      'event_label': 'Checkout Opened'
+                  });
+              } else {
+                  console.log('Checkout popup not found after click');
+              }
+          }, 1000);  // Check after 1 second
+      }
+  });
+
+  // Listen for custom donation completed event
+  window.addEventListener('fundraiseup:donation:completed', function(e) {
+      console.log('Donation completed event detected', e.detail);
+      sendGAEvent('purchase', {
+          'transaction_id': e.detail.donationId || 'unknown',
+          'value': e.detail.amount || 0,
+          'currency': e.detail.currency || 'USD'
       });
+  });
 
-      // Start an interval to check for the modal
-      const modalCheckInterval = setInterval(function() {
-        const modalElement = document.querySelector('.modal-desktop'); // Replace with the actual class/ID
-        if (modalElement) { 
-          clearInterval(modalCheckInterval); // Stop checking
-          console.log('Donation modal opened!'); 
+  // Test buttons
+  document.body.insertAdjacentHTML('beforeend', `
+      <button onclick="testCheckoutOpened()">Simulate Checkout Opened</button>
+      <button onclick="testDonationCompleted()">Simulate Donation Completed</button>
+  `);
 
-          // Track modal open in Google Analytics
-          gtag('event', 'donation_form_opened', {
-            'event_category': 'fundraise_up',
-            'event_label': 'donation_modal_open'
-          });
-        }
-      }, 200); // Check every 200ms
-    });
+  function testCheckoutOpened() {
+      console.log('Simulating checkout opened');
+      sendGAEvent('checkout_opened', {
+          'event_category': 'Donation',
+          'event_label': 'Checkout Opened (Test)'
+      });
+  }
+
+  function testDonationCompleted() {
+      console.log('Simulating donation completed');
+      sendGAEvent('purchase', {
+          'transaction_id': 'test123',
+          'value': 700,
+          'currency': 'USD'
+      });
+  }
+
+  // Additional check to ensure gtag is working
+  window.addEventListener('load', function() {
+      console.log('Page loaded, sending test event');
+      sendGAEvent('page_view', {
+          'event_category': 'Test',
+          'event_label': 'Page Loaded'
+      });
+  });
   </script>
 
 
