--- a/index.html
+++ b/index.html
@@ -97,14 +97,9 @@ for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
   function testDonationCompleted() {
       console.log('Simulating donation completed');
       sendGAEvent('purchase', {
-          currency: 'USD',
-          transaction_id: 'test123',
-          value: 700,
-          items: [{
-              item_name: 'Donation',
-              price: 700,
-              quantity: 1
-          }]
+          'currency': 'USD',
+          'transaction_id': 'test123',
+          'value': 700,
       });
   }
 
