--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
 
   // Detect donation button click and subsequent iframe creation
   document.addEventListener('click', function(event) {
-      if (event.target.id === 'donation-button' || event.target.closest('#donation-button')) {
+      if (event.target.id === 'XJKDHSTQ' || event.target.closest('#XJKDHSTQ')) {
           console.log('Donation button clicked');
           
           detectIframeCreation((iframe) => {
